Finished filter when connected